@@ -57,6 +57,7 @@
 			<input title="buga" name="firstname" id="firstnamec" />
 			<label id="errorFirstname" for="firstname" class="error">error for firstname</label>
 			<input title="buga" name="lastname" id="lastnamec" />
+			<input name="username" id="usernamec" />
 		</form>
 		
 		<form id="userForm">
